# NeuralNetworkTestCaffe

./: .gitignore  CMakeLists.txt  NeuralNetworkCaffeTest.cbp  data.txt  data_all.txt  data_min.txt  hd5files2.txt  main.cpp
cmake/: Cuda.cmake  LMDB++Config.cmake  LMDBConfig.cmake  ProtoBuf.cmake  gflags.cmake  glog.cmake
learn/: adam_iter_1000000.caffemodel  adam_iter_1000000.solverstate  hdf5files.txt  net-memory.prototxt  net.prototxt  net_simple.prototxt  solver.prototxt  train.sh
proto/: test.proto
src/: CheckAccurancy.cpp  CountSamples.cpp  DumpImages.cpp  LinePoint.h  MakeSamples.cpp  Pollini.cpp  TestFindRect.cpp  TestImages.cpp  TestImages.h  TestImagesVector.cpp  TestImagesVector.h
src/layer/: MyDataLayer.cpp  MyDataLayer.h
src/proto/: test.pb.cc  test.pb.h  test_pb2.py
